Update index.html for oAuth2 token

--- a/index.html
+++ b/index.html
@@ -39,11 +39,16 @@
 	  pre
 	  {
 		padding: 2px !important
-	}
+	  }
 	  
 	  .topbar-wrapper img[alt="Swagger UI"], .topbar-wrapper span 
 	  {
 		visibility: collapse;
+	  }
+
+	  div.auth-container:first-of-type
+	  {
+		display: none;
 	  }
 
 	  .topbar-wrapper .link:before 
