--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         plugins: [
           SwaggerUIBundle.plugins.DownloadUrl
         ],
+		docExpansion: 'full',
         layout: "StandaloneLayout"
       })
       // End Swagger UI call region
