--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>XBRL API Documentation</title>
     <link rel="stylesheet" type="text/css" href="./src/swagger-ui.css" >
-    <link rel="stylesheet" href="./src/xus-api.css">
+    <!--<link rel="stylesheet" href="./src/xus-api.css">-->
 	<link rel="icon" type="image/png" href="./src/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="./src/favicon-16x16.png" sizes="16x16" />
     <style>
@@ -41,21 +41,37 @@
 		padding: 2px !important
 	  }-->
 	  
+	  .swagger-ui .topbar {
+		padding: 8px 30px;
+		background-color: #E2E2E2;
+		height: 12px !important;
+		background-image: url('./src/bar.png') !important;
+	  }
+	  .swagger-ui .title {
+	  padding-top: 20px !important;
+	  }
+	  div .auth-wrapper, form .download-url-input, form .download-url-button
+	  {
+	  display:none !important;
+	  }
+	  div .topbar-wrapper
+	  {
+	  }
 	  .topbar-wrapper img[alt="Swagger UI"], .topbar-wrapper span 
 	  {
 		visibility: collapse;
 	  }
-
-	  .topbar-wrapper .link:before 
+	  .topbar-wrapper .link:before
 	  {
 		content: url('./src/logo.png');
 		margin-top:8px;
+		margin-left: -28px !important;
 	  }
     </style>
   </head>
 
   <body>
-    <div id="swagger-ui"></div>
+    <div id="swagger-ui" style="float-right"></div>
 
     <script src="./src/swagger-ui-bundle.js"> </script>
     <script src="./src/swagger-ui-standalone-preset.js"> </script>
@@ -73,7 +89,7 @@
         plugins: [
           SwaggerUIBundle.plugins.DownloadUrl
         ],
-		// docExpansion: 'full',
+		docExpansion: 'full',
         layout: "StandaloneLayout"
       })
       // End Swagger UI call region
