--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         plugins: [
           SwaggerUIBundle.plugins.DownloadUrl
         ],
-		docExpansion: 'full',
+		// docExpansion: 'full',
         layout: "StandaloneLayout"
       })
       // End Swagger UI call region
