update for oAuth

--- a/index.html
+++ b/index.html
@@ -28,19 +28,6 @@
         margin:0;
         background: #fafafa;
       }
-	  
-	  <!--code
-	  {
-	    background: #41444E !important;
-		color:#E2E2E2 !important;
-		padding: 2px !important;
-	  }
-	  
-	  pre
-	  {
-		padding: 2px !important
-	  }-->
-	  
 	  .swagger-ui .topbar {
 		padding: 8px 30px;
 		background-color: #E2E2E2;
@@ -66,6 +53,10 @@
 		content: url('./src/logo.png');
 		margin-top:8px;
 		margin-left: -28px !important;
+	  }
+	  div.auth-container:first-of-type
+	  {
+	  display:none
 	  }
     </style>
   </head>
