update for swagger formatting

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <title>XBRL API Documentation</title>
-    <!--<link rel="stylesheet" type="text/css" href="./src/swagger-ui.css" >-->
-    <link rel="stylesheet" href="./src/xus-api.css">
+    <link rel="stylesheet" type="text/css" href="./src/swagger-ui.css" >
+    <!--<link rel="stylesheet" href="./src/xus-api.css">-->
 	<link rel="icon" type="image/png" href="./src/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="./src/favicon-16x16.png" sizes="16x16" />
     <style>
